# arazzo-rs

./: .gitignore  README.md
.github/workflows/: build.yml
arazzo-models/: CHANGELOG.md  Cargo.toml  README.md  release.groovy
arazzo-models/src/: either.rs  extensions.rs  json.rs  lib.rs  payloads.rs  serialise.rs  serialize.rs  v1_0.rs  yaml.rs
arazzo-models/tests/: input.rs  output.rs  yaml.rs
scripts/: ci-musl-build.sh
