[package]
name = "arazzo-models"
version = "0.0.7"
edition = "2024"
authors = ["Ronald Holshausen <ronald.holshausen@smartbear.com>"]
description = "Rust models for the Arazzo Open API specification"
homepage = "https://github.com/pactflow/arazzo-rs"
repository = "https://github.com/pactflow/arazzo-rs"
readme = "README.md"
keywords = ["arazzo"]
license = "Apache-2.0"

[features]
default = ["json", "yaml", "serialize"]
json = []
yaml = ["dep:yaml-rust2"]
serialize = ["dep:serde"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.0"
maplit = "1.0.2"
serde = { version = "1.0.219", optional = true }
serde_json = "1.0.142"
yaml-rust2 = { version = "0.10.3", optional = true }

[dev-dependencies]
expectest = "0.12.0"
pretty_assertions = "1.4.1"
serde_yaml = "0.9.33"
trim-margin = "0.1.0"
